--- a/css/style.css
+++ b/css/style.css
@@ -352,7 +352,7 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-bottom: 204px;
+  margin-bottom: 100px;
   overflow: hidden;
 }
 .nft-cards-list {
@@ -387,13 +387,20 @@ header {
   background-position: bottom left;
   background-repeat: no-repeat;
   width: 100%;
+      display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .about-content-container {
   width: 1410px;
   height: 772px;
   display: grid;
   place-items: center;
-  margin: 0 auto;
+    display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   color: var(--text-white);
 }
 .about-text-container {
@@ -485,6 +492,7 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 148px;
 }
 .how-to-heading {
   font-size: 44px;
