--- a/css/style.css
+++ b/css/style.css
@@ -1038,9 +1038,9 @@ header {
   height: 360px;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr) [6];
+  -ms-grid-columns: (1fr);
   grid-template-columns: repeat(6, 1fr);
-  -ms-grid-rows: (1fr) [3];
+  -ms-grid-rows: (1fr);
   grid-template-rows: repeat(3, 1fr);
   margin-top: 60px;
 }
