--- a/css/style.css
+++ b/css/style.css
@@ -1617,6 +1617,7 @@ header {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  border: 1px solid #41454a;
 }
 .filter-name {
   text-align: left;
